--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>8</java.version>
+		<sonar.projectKey>dhoni</sonar.projectKey>
+                <sonar.organization>thalaiva</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencyManagement>
@@ -101,14 +104,17 @@
 		</dependency>
 
 	</dependencies>
+	
+<build>
+    <pluginManagement>
 
-	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+ <pluginManagement>	    
 	</build>
 	<repositories>
 		<repository>
