--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
- <pluginManagement>	    
+ </pluginManagement>	    
 	</build>
 	<repositories>
 		<repository>
